
	* Asterisk 13.0.1 Released.

	* AST-2014-012: Fix error with mixed address family ACLs.

	  Prior to this commit, the address family of the first item in an ACL
	  was used to compare all incoming traffic. This could lead to traffic
	  of other IP address families bypassing ACLs.

	  ASTERISK-24469 #close
	  Reported by Matt Jordan

	* AST-2014-018 - func_db: DB Dialplan function permission escalation
	  via AMI.

	  The DB dialplan function when executed from an external protocol
	  (for instance AMI), could result in a privilege escalation.

	  Asterisk now inhibits the DB function from being executed from an
	  external interface if the live_dangerously option is set to no.

	  ASTERISK-24534
	  Reported by: Gareth Palmer
	  patches: submitted by Gareth Palmer (license 5169)

2014-10-24  Asterisk Development Team <asteriskteam@digium.com>

	* Asterisk 13.0.0 Released.

2014-10-22 21:27 +0000 [r426097]  Shaun Ruffell <sruffell@digium.com>

	* codecs/codec_dahdi.c: codec_dahdi: Cannot use struct
	  ast_translator.core_{src,src}_codec. This fixes a Segmentation
	  fault introduced in r419044 "media formats: re-architect handling
	  of media for performance improvements". The problem is that
	  codec_dahdi was using core_src_codec and core_dst_codec in the
	  ast_translator structure when these fields were never set. Now
	  instead of trying to map the new core codec descriptions to the
	  way DAHDI defines different codecs, we will store the DAHDI
	  specific formats in 'struct translator' directly so we can refer
	  to them without mapping. This also allows us to remove the
	  "global_format_map" structure, since we can now query the list of
	  translators directly to make sure we do not ever register a DAHDI
	  based translator for a specific path more than once and eliminate
	  the need to keep the list and the map in sync. ASTERISK-24435
	  #close Reported by: Marian Koniuszko Review:
	  https://reviewboard.asterisk.org/r/4105/
